Bug 177326 - compositing does not restart when plugging the power back on
Summary: compositing does not restart when plugging the power back on
Status: CLOSED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: powermanagement-daemon (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Dario Freddi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-09 19:16 UTC by Luis Silva
Modified: 2010-10-02 12:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luis Silva 2008-12-09 19:16:34 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

With Powerdevil, there is an option to stop desktop effects and compositing when on battery power. Using this option compositing is effectively turned off as soon as I unplug the laptop. The problem is that the desktop effects don't come back when I plug the power cord in. The expected behaviour would be that desktop effects would stop on battery power and restart when on the plug.
Comment 1 Dario Freddi 2008-12-10 16:15:10 UTC
SVN commit 895374 by dafre:

BUG: 177326

Adding compositing status to a configuration file, so that it can be restored in any case


 M  +6 -0      PowerDevilSettings.kcfg  
 M  +4 -5      daemon/PowerDevilDaemon.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=895374
Comment 2 Luis Silva 2008-12-10 16:23:17 UTC
Thanks for the fix. KDE4 will rock even more now.