BUG: 177326

Adding compositing status to a configuration file, so that it can be restored in any case

svn path=/trunk/KDE/kdebase/workspace/; revision=895374